--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 services:
   server:
     image: nickifeajika/whiteboard-server
-    command: python server.py
+    command: python3 server.py
     # image: notme/whiteboard-server # for testing
     # command: python try_redis.py
     ports:
@@ -13,7 +13,7 @@ services:
       - servernet
 
   redis:
-    image: redis  # Use the official Redis image
+    image: redis
     # ports:
     # - "6379:6379"  # Expose Redis port (optional, for local access)
     command: redis-server
