--- a/prometheus/prometheus-service.yaml
+++ b/prometheus/prometheus-service.yaml
@@ -6,12 +6,22 @@ metadata:
   annotations:
       prometheus.io/scrape: 'true'
       prometheus.io/port:   '9090'
-  
+
 spec:
   selector: 
     app: prometheus-server
-  type: NodePort  
+  type: LoadBalancer  
   ports:
-    - port: 8080
+    - port: 3000
       targetPort: 9090 
       nodePort: 30000
+
+
+# spec:
+#   selector: 
+#     app: prometheus-server
+#   type: NodePort  
+#   ports:
+#     - port: 8080
+#       targetPort: 9090 
+#       nodePort: 30000
